// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductCardTotal /> it renders ProductCardTotal 1`] = `
<div
  className="mfui-beta-product-card-total className"
>
  <div
    className="mfui-beta-product-card-total__wrap classNameWrap"
  >
    <div
      className="mfui-beta-product-card-total__cost mfui-beta-product-card-total__cost_old-value classNameCost"
    >
      <span
        className="mfui-beta-product-card-total__price"
      >
        600 ₽
      </span>
       
      <span
        className="mfui-beta-product-card-total__old-price"
      >
        750 ₽
      </span>
      <br />
      <span
        className="mfui-beta-product-card-total__unit"
      >
        в месяц
      </span>
    </div>
    <div
      className="mfui-beta-product-card-total__buttons classNameButtons"
    >
      <Button
        classes={
          Object {
            "root": "mfui-beta-product-card-total__description-more classNameMore",
          }
        }
        fullWidth={true}
        href="moreLink"
        onClick={[Function]}
        target="_self"
        type="outline"
      >
        moreText
      </Button>
      <div
        className="mfui-beta-product-card-total__connect-button classNameConnect"
        onClick={[Function]}
      >
        <div
          className="mfui-beta-product-card-total__connect-text-block"
        >
          <span
            className="mfui-beta-product-card-total__connect-text-words"
          >
            connectText
          </span>
          абонентам МегаФона
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ProductCardTotal /> it renders submit button 1`] = `
<div
  className="mfui-beta-product-card-total className"
>
  <div
    className="mfui-beta-product-card-total__wrap classNameWrap"
  >
    <div
      className="mfui-beta-product-card-total__cost mfui-beta-product-card-total__cost_old-value classNameCost"
    >
      <span
        className="mfui-beta-product-card-total__price"
      >
        600 ₽
      </span>
       
      <span
        className="mfui-beta-product-card-total__old-price"
      >
        750 ₽
      </span>
      <br />
      <span
        className="mfui-beta-product-card-total__unit"
      >
        в месяц
      </span>
    </div>
    <div
      className="mfui-beta-product-card-total__buttons classNameButtons"
    >
      <Button
        classes={
          Object {
            "root": "mfui-beta-product-card-total__button classNameSubmit",
          }
        }
        fullWidth={true}
        href="submitLink"
        onClick={[Function]}
        target="_self"
      >
        submitText
      </Button>
      <div
        className="mfui-beta-product-card-total__connect-button classNameConnect"
        onClick={[Function]}
      >
        <div
          className="mfui-beta-product-card-total__connect-text-block"
        >
          <span
            className="mfui-beta-product-card-total__connect-text-words"
          >
            connectText
          </span>
          абонентам МегаФона
        </div>
      </div>
    </div>
  </div>
</div>
`;
